bug fix: seasons and their title wouldn't not fit correctly

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,8 +142,3 @@
     margin-top: 50px;
     color: white;
 }
-
-.text-center {
-    display: flex;
-    align-items: center;
-}
